# mcadminbot

./: README.md  pyproject.toml
.github/workflows/: ci-pr.yaml  ci.yaml  publish.yaml  release.yaml  tag-version.yaml  version-bump.yml
docs/: commands.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst
mcadminbot/: config.py  defaults.yaml  entry.py
mcadminbot/bot/: bot.py  botcommands.py  exceptions.py  minecraftcommands.py  systemcommands.py  utils.py
tests/: test_mcadminbot.py
